<resources>
    <string name="app_name">Weather</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_header_full_name">Full Name</string>
    <string name="nav_header_email_address">Email address</string>
    <string name="content_main_decoded_response_java">Decoded Response (Java)</string>
    <string name="content_main_wait_decoded_json_here">Wait - decoded JSON here ...</string>
    <string name="content_main_wait_decoded_json_here_1">Wait - decoded JSON here ...</string>
    <string name="cpntent_main_wait_decoded_json_here_2">Wait - decoded JSON here ...</string>
    <string name="content_main_wait_decoded_json_here_3">Wait - decoded JSON here ...</string>
    <string name="content_main_wait_decoded_json_here_4">Wait - decoded JSON here ...</string>
    <string name="content_main_wait_decoded_json_here_5">Wait - decoded JSON here ...</string>
    <string name="content_main_wait_decoded_json_here_6">Wait - decoded JSON here ...</string>
    <string name="content_main_wait_decoded_json_here_7">Wait - decoded JSON here ...</string>
    <string name="content_main_wait_decoded_json_here_8">Wait - decoded JSON here ...</string>
    <string name="content_main_wait_full_json_string_goes_here">Wait - JSON string goes here ...</string>
    <string name="content_main_server_response_json">Server Response (JSON)</string>
    <string name="content_main_client_request_url">Client Request (URL)</string>
    <string name="content_main_url_goes_here">URL goes here...</string>
    <string name="content_main_hello">Hello !</string>
    <string name="activity_main_drawer_my_favorites">My Favorites</string>
    <string name="activity_main_drawer_search">Search</string>
    <string name="activity_main_drawer_notifications">Notifications</string>
    <string name="activity_main_drawer_communicate">Communicate</string>
    <string name="activity_main_drawer_settings">Settings</string>
    <string name="activity_main_drawer_about">About</string>
    <string name="title_activity_maps">Map</string>

    <string name="google_maps_key">AIzaSyAi1EZDeJeTF3MZ6VTz_RDD8gKunJkchho</string>
</resources>
