<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="puf.example.td1.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_main_client_request_url"/>
        <TextView
            android:id="@+id/txtRequestUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_main_url_goes_here" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/content_main_server_response_json" />
        <TextView
            android:id="@+id/txtResponseJson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_main_wait_full_json_string_goes_here" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/content_main_decoded_response_java" />
        <TextView
            android:id="@+id/winddeg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_main_wait_decoded_json_here" />
        <TextView
            android:id="@+id/windspeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_main_wait_decoded_json_here_1" />
        <TextView
            android:id="@+id/coordlon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpntent_main_wait_decoded_json_here_2" />
        <TextView
            android:id="@+id/coordlat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_main_wait_decoded_json_here_3" />
        <TextView
            android:id="@+id/temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_main_wait_decoded_json_here_4" />
        <TextView
            android:id="@+id/press"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_main_wait_decoded_json_here_5" />
        <TextView
            android:id="@+id/humid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_main_wait_decoded_json_here_6" />
        <TextView
            android:id="@+id/tempmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_main_wait_decoded_json_here_7" />
        <TextView
            android:id="@+id/tempmax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_main_wait_decoded_json_here_8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/content_main_hello"
            android:id="@+id/txtMsg" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="See the location on Google Maps"
            android:id="@+id/mapsbutton" />
    </LinearLayout>
</RelativeLayout>
