<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24px"
            android:title="Home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_library_music_black_24px"
            android:title="@string/activity_main_drawer_my_favorites"
            app:actionLayout="@layout/menu_counter"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_headset_black_24px"
            android:title="@string/activity_main_drawer_search" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_playlist_play_black_24px"
            android:title="@string/activity_main_drawer_notifications" />
    </group>

    <item android:title="@string/activity_main_drawer_communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24px"
                android:title="@string/activity_main_drawer_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24px"
                android:title="@string/activity_main_drawer_about" />
        </menu>
    </item>

</menu>
